modificacion final para entrega

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,8 +7,10 @@
 <button onclick="users()">Endpoint /api/users</button><br>
 <button onclick="carts()">Endpoint /api/carts</button><br>
 <button onclick="tickets()">Endpoint /api/tickets</button><br>
-<label for="productosAdmin">Para cargar o eliminar productos</label>
+<label for="productosAdmin">Para cargar o eliminar productos (SOLO ADMIN y PREMIUM)</label>
 <button name="productosAdmin" onclick="productosAdmin()">Endpoint /api/products/admin</button><br>
+<label for="productosUser">Vista de productos para USER</label>
+<button name="productosUser" onclick="productosUser()">Endpoint /home</button><br>
 
 
 
@@ -37,6 +39,10 @@ function tickets(){
 }
 function productosAdmin(){
     const url2 = url + `/api/products/admin/` 
+    window.location.href = url2
+}
+function productosUser(){
+    const url2 = url + `/home/` 
     window.location.href = url2
 }
 function carts(){
