--- a/views/productsAdmin.handlebars
+++ b/views/productsAdmin.handlebars
@@ -4,7 +4,7 @@
 <h3>Tipo de usuario: </h3> <input id="usuario_rol_input" type="text" value="{{usuario.rol}}" disabled>
 
 <h2>Formulario para eliminar producto</h2>
-
+<h3>Solo los "Admin" podran eliminar los productos.</h3>
 <form action="">
 <label for="id producto a eliminar">Coloque el ID del producto a eliminar</label>
 <input type="text" id="eliminarIDAdmin">
